first published commit

--- a/casestudy_pandion.html
+++ b/casestudy_pandion.html
@@ -20,22 +20,22 @@
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li>
                         <a class="nav-item" href="index.html#offer-link">
-                            <p>ABOUT</p>
+                            <p>ÜBER UNS</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-item" href="index.html#founder-link">
+                        <a class="nav-item" href="index.html#casestudy-link">
                             <p>PORTFOLIO</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PRICING</p>
+                            <p>PREISE</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#contact-link">
-                            <p>CONTACT</p>
+                            <p>KONTAKT</p>
                         </a>
                     </li>
                 </ul>
@@ -47,7 +47,7 @@
                 <h2 class="hero-header margintop">Pandion</h2>
                 <h2 class="hero-slogan">”Himmel Unter Berlin” - Einladungsmanagement</h2>
             </div>
-            <img class="margintop hdpicture" src="./images/cs_pandion/pandionhero.png" alt="plakat qt/eventstudio">
+            <img class="margintop hdpicture" src="./images/cs_pandion/Pandion_hero.png" alt="plakat qt/eventstudio">
         </div>
 
         <div class="page-wrapper">
@@ -82,18 +82,18 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_pandion/HUB_visual_003-1080x675 1.png" alt="process one">
+                            <img src="./images/cs_pandion/Pandion_process1.png" alt="process one">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_pandion/himmelunterberlin-insideout-by-florafaunavisions 1.png"
+                            <img src="./images/cs_pandion/Pandion_process2.png"
                              alt="process two">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_pandion/size=708x398 1.png"  alt="process three">
+                            <img src="./images/cs_pandion/Pandion_process3.png"  alt="process three">
                         </div> 
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                 <p class="test-text margintop">Da das Projekt in einer ‘Secret-Location’ stattgefunden hat, mussten wir die Einladungen auf drei Mailings aufsplitten: Allgemeine Einladung, Bestätigung und Bekanntgabe der Location. Die eingeladenen Gäste konnten sich direkt in der Mail und ohne Umweg einer Landing Page für das Event einladen und erhielten bei Bestätigung einen automatisierten Kalendereintrag auf ihren unterschiedlichen Devices.   
                 </p>
             </div>
-            <img class="metroboard margintop hdpicture" src="./images/cs_pandion/StefanReiss_OT1083_Totale1 1.png" alt="metroboard">
+            <img class="metroboard margintop hdpicture" src="./images/cs_pandion/Pandion_banner.png" alt="metroboard">
             <div class="page-wrapper">
                 <p class="margintop">“Wer eine professionelle, unkomplizierte und rasche Umsetzung des Einladungsmanagements für seine Veranstaltungen benötigt und außerdem erwartet, dass kurzfristige Ergänzungen immer möglich sind, ist beim NoUnicornYet-Team an der richtigen Adresse. Regelmäßige Updates und ein zuverlässiges Feedback runden das Gesamtpaket ab! Wir waren sehr zufrieden und freuen uns auf die weitere Zusammenarbeit.”
                 </p>
@@ -151,7 +151,7 @@
                         <h3 class="casestudy-name unselectable">QT/eventstudio</h4>
                         <h3 class="casestudy-slogan unselectable">#LifeIsQTful</h3>
                         <p class="casestudy-action unselectable">Brand | Design</p>
-                        <a href="casestudy_qteventstudio.html"><button class="casestudy-bttn">View Case study -></button></a>
+                        <a href="casestudy_qteventstudio.html"><button class="casestudy-bttn">Mehr erfahren -></button></a>
                     </div>
                 </div>
                 <div class="swiper-slide">
