--- a/casestudy_siemens.html
+++ b/casestudy_siemens.html
@@ -20,22 +20,22 @@
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li>
                         <a class="nav-item" href="index.html#offer-link">
-                            <p>ABOUT</p>
+                            <p>ÜBER UNS</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-item" href="index.html#founder-link">
+                        <a class="nav-item" href="index.html#casestudy-link">
                             <p>PORTFOLIO</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PRICING</p>
+                            <p>PREISE</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#contact-link">
-                            <p>CONTACT</p>
+                            <p>KONTAKT</p>
                         </a>
                     </li>
                 </ul>
@@ -47,7 +47,7 @@
                 <h2 class="hero-header margintop">Siemensstadt Square</h2>
                 <h2 class="hero-slogan">Fassadengestaltung einer denkmalgeschützten 600qm Fassade</h2>
             </div>
-            <img class="margintop hdpicture" src="./images/cs_siemens/siemens_fassade_rohrdamm_nollendammallee 1.png" alt="plakat qt/eventstudio">
+            <img class="margintop hdpicture" src="./images/cs_siemens/Siemens_hero.png" alt="fassade Siemensstadt">
         </div>
 
         <div class="page-wrapper">
@@ -81,17 +81,17 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_siemens/Siemensstadt-Square 1.png" alt="process one">
+                            <img src="./images/cs_siemens/Siemens_process1.png" alt="process one">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_siemens/157193599_708351716526554_5614941194828709417_n 1.png" alt="process three">
+                            <img src="./images/cs_siemens/Siemens_process2.png" alt="process three">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_siemens/210803_SST_Rahmenvertrag_1520x760px_07 1.png" alt="process two">
+                            <img src="./images/cs_siemens/Siemens_process3.png" alt="process two">
                         </div> 
                     </div>
                     
@@ -102,7 +102,7 @@
                 <p class="test-text margintop">Die Fassade wurde binnen eines verlängerten Wochenendes von uns foliert, wobei der zu veröffentlichte Name nach der Folierung noch einmal durch eine Zusatzfolie überdeckt wurde, um diesen erst am Tag der Namens-Veröffentlichung enthüllen zu können.   
                 </p>
             </div>
-            <img class="siemensstadtpic margintop" src="./images/cs_siemens/W1Zicuec_400x400 1.png" alt="metroboard">
+            <img class="siemensstadtpic margintop" src="./images/cs_siemens/Siemens_banner.png" alt="siemensbanner">
             <div class="page-wrapper">
                 <p class="margintop">“Durch unsere unermüdliche Recherche und unseren Einsatz sind wir durch das Siemensstadt-Square-Projekt nun in der Lage, unter Denkmalschutz stehende Flächen zu kommunikativen Zwecken zu nutzen. Das Projekt war ein Meilenstein in unserer bisherigen Agentur und ich freue mich sehr, diese Innovation mit vorangetrieben zu haben.””
                 </p>
