--- a/datenschutz.html
+++ b/datenschutz.html
@@ -20,22 +20,22 @@
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li>
                         <a class="nav-item" href="index.html#offer-link">
-                            <p>ABOUT</p>
+                            <p>ÜBER UNS</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-item" href="index.html#founder-link">
+                        <a class="nav-item" href="index.html#casestudy-link">
                             <p>PORTFOLIO</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PRICING</p>
+                            <p>PREISE</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#contact-link">
-                            <p>CONTACT</p>
+                            <p>KONTAKT</p>
                         </a>
                     </li>
                 </ul>
@@ -50,7 +50,7 @@
                 <p class="margintop">
                     Die verantwortliche Stelle für die Datenverarbeitung auf dieser Website ist:<br>
                     <br>
-                    No Unicorn (Yet)<br>
+                    No Unicorn (Yet) GbR<br>
                     Moritz Tonn<br>
                     Krumpuhler Weg 6<br>
                     13507 Berlin<br>
