--- a/impressum.html
+++ b/impressum.html
@@ -20,22 +20,22 @@
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li>
                         <a class="nav-item" href="index.html#offer-link">
-                            <p>ABOUT</p>
+                            <p>ÜBER UNS</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-item" href="index.html#founder-link">
+                        <a class="nav-item" href="index.html#casestudy-link">
                             <p>PORTFOLIO</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PRICING</p>
+                            <p>PREISE</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#contact-link">
-                            <p>CONTACT</p>
+                            <p>KONTAKT</p>
                         </a>
                     </li>
                 </ul>
@@ -46,28 +46,36 @@
             <div class="page-wrapper">
                 <h3 class="margintop">IMPRESSUM</h3>
                 <p class="margintop">
-                    No Unicorn (Yet)<br>
+                    No Unicorn (Yet) GbR<br>
                     Krumpuhler Weg 6<br>
                     13507 Berlin | Deutschland<br>
                     <br>
-                    Vertreten durch:<br>
+                    www.nounicornyet.com<br>
+                    Facebook: @No Unicorn (Yet)<br>
+                    instagram: @nounicornyet<br>
+                    LinkedIn: @No Unicorn(Yet)<br><br>
+                    Bei redaktionellen Inhalten:<br>
+                    Verantwortlich nach § 55 Abs. 2 RStV<br>
                     Moritz Tonn<br>
+                    Krumpuhler Weg 6<br>
+                    13507 Berlin | Deutschland<br>
                     <br>
-                    Telefon: +49 (Deiner Nummer)<br>
-                    E-Mail: hello@nounicornyet.com<br>
+                    <!-- Telefon: +49 177<br> -->
+                    E-Mail: moritz@nounicornyet.com<br>
                 </p>
-                <h3 class="margintop">REGISTEREINTRAG</h3>
+                <!-- <h3 class="margintop">REGISTEREINTRAG</h3>
                 <p class="margintop">
                     Eintragung im Handelsregister.<br>
                     <br>
                     Registergericht: Amtsgericht Berlin <br>
                     Registernummer: <br>
-                </p>
+                </p> -->
                 <h3 class="margintop">UMSATZSTEUER</h3>
                 <p class="margintop">
-                    Umsatzsteuer-Identifikationsnummer <br>
+                    Umsatzsteuer-Identifikationsnummer: <br>
+                    17/201/02756<br>
                     gemäß §27 a Umsatzsteuergesetz:<br>
-
+                    Amtsgericht Wedding F1102
                 </p>
             </div>
         </div>
