--- a/casestudy_qteventstudio.html
+++ b/casestudy_qteventstudio.html
@@ -19,22 +19,22 @@
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li>
                         <a class="nav-item" href="index.html#offer-link">
-                            <p>ABOUT</p>
+                            <p>ÜBER UNS</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-item" href="index.html#founder-link">
+                        <a class="nav-item" href="index.html#casestudy-link">
                             <p>PORTFOLIO</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PRICING</p>
+                            <p>PREISE</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#contact-link">
-                            <p>CONTACT</p>
+                            <p>KONTAKT</p>
                         </a>
                     </li>
                 </ul>
@@ -46,7 +46,7 @@
                 <h2 class="hero-header margintop">QT/eventstudio</h2>
                 <h2 class="hero-slogan">#QTfulEventsOnly</h2>
             </div>
-            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_2.png" alt="plakat qt/eventstudio">
+            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_hero.png" alt="plakat qt/eventstudio">
         </div>
 
         <div class="page-wrapper">
@@ -85,32 +85,32 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_1.png" alt="process one">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process1.png" alt="process one">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_2.png" alt="process two">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process2.png" alt="process two">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_3.png" alt="process three">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process3.png" alt="process three">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_4.png" alt="process four">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process4.png" alt="process four">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_5.png" alt="process five">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process5.png" alt="process five">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_6.png" alt="process six">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_process6.png" alt="process six">
                         </div> 
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                 <p class="test-text margintop">Basierend auf dem abgestimmten Brand Book, der daraus folgendsen   Strategie und den auf ihr basierenden 4 Kampagnen haben wir dann entsprechende Templates für alle digitalen Medien & Drucksorten erstellt, wie oben anhand der Bilder zum ‘Grid’ zu sehen.   
                 </p>
             </div>
-            <img class="metroboard margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_1.png" alt="metroboard">
+            <img class="metroboard margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_banner1.png" alt="metroboard">
             <div class="page-wrapper">
                 <p class="margintop">“Weil die Kundin sowohl socializing als auch business-based Content in einem Brand kommunizieren wollte, mussten wir einerseits genügend Raum für das ‘Lebensgefühl hinter QT/’, andererseits aber auch den faktisch wirtschaftlichen Mehrwert des Unternehmens in ein und derselben Außendarstellung manifestieren. Unser Slogan “QTful Events Only” deckt beide dieser Seiten ab. Er steht sowohl für professionelles Eventmanagement, als auch für einzigartige Erlebnisse, die wir mit den Events persönlich verbinden.”
                 </p>
@@ -137,32 +137,32 @@
                     </p>
                 </div>
             </div>
-            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_socialmedia_lifeisqtful 1.png" alt="lifeisqtful">
+            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_banner2.png" alt="lifeisqtful">
             <div class="swiper qtProcessSlider qtresults margintop">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/220324_QT__instagram_story_1 1.png" alt="process one">
+                            <img class="unselectable" src="./images/cs_qteventstudio/QTeventstudio_results1.png" alt="process one">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/220325_QT_instagram_story_1 1.png" alt="process two">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_results2.png" alt="process two">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/kw12_220325_qt_instagram_post_3 1.png" alt="process three">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_results3.png" alt="process three">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/kw12_220322_qt_insta_post_1 1.png" alt="process four">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_results4.png" alt="process four">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/KW14_220404_QT_Facebook_post 1.png" alt="process five">
+                            <img src="./images/cs_qteventstudio/QTeventstudio_results5.png" alt="process five">
                         </div> 
                     </div>
                 </div>
